--- a/resources/views/blog-single.html
+++ b/resources/views/blog-single.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-lg fixed-top ftco-navbar-light" id="navbar">
 <div class="container">
-<a class="navbar-brand align-items-center" href="index-2.html">
+<a class="navbar-brand align-items-center" href="index.blade.php">
 Kn.Ford
 </a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,13 +23,13 @@ Kn.Ford
 </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link" href="index-2.html#home">Home</a></li>
-<li class="nav-item"><a class="nav-link" href="index-2.html#about">About</a></li>
-<li class="nav-item"><a class="nav-link" href="index-2.html#services">Services</a></li>
-<li class="nav-item"><a class="nav-link" href="index-2.html#portfolio">Portfolio</a></li>
-<li class="nav-item"><a class="nav-link" href="index-2.html#pricing">Pricing</a></li>
-<li class="nav-item"><a class="nav-link active" href="index-2.html#blog">Blog</a></li>
-<li class="nav-item"><a class="nav-link" href="index-2.html#contactme">Contact</a></li>
+<li class="nav-item"><a class="nav-link" href="index.blade.php#home">Home</a></li>
+<li class="nav-item"><a class="nav-link" href="index.blade.php#about">About</a></li>
+<li class="nav-item"><a class="nav-link" href="index.blade.php#services">Services</a></li>
+<li class="nav-item"><a class="nav-link" href="index.blade.php#portfolio">Portfolio</a></li>
+<li class="nav-item"><a class="nav-link" href="index.blade.php#pricing">Pricing</a></li>
+<li class="nav-item"><a class="nav-link active" href="index.blade.php#blog">Blog</a></li>
+<li class="nav-item"><a class="nav-link" href="index.blade.php#contactme">Contact</a></li>
 </ul>
 </div>
 </div>
@@ -39,7 +39,7 @@ Kn.Ford
 <div class="container">
 <div class="row no-gutters slider-text align-items-center justify-content-center">
 <div class="col-md-9 pt-5 mt-5 text-center">
-<p class="breadcrumbs"><span class="me-2"><a href="index-2.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="me-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Blog Single <i class="fa fa-chevron-right"></i></span></p>
+<p class="breadcrumbs"><span class="me-2"><a href="index.blade.php">Home <i class="fa fa-chevron-right"></i></a></span> <span class="me-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Blog Single <i class="fa fa-chevron-right"></i></span></p>
 <h1 class="mb-0 bread">Blog Details</h1>
 </div>
 </div>
@@ -177,11 +177,11 @@ Kn.Ford
 </form>
 </div>
 </div>
-</div> 
+</div>
 
 </div>
 </div>
-</section> 
+</section>
 <section class="ftco-intro py-5 bg-primary">
 <div class="container">
 <div class="row d-flex justify-content-center">
@@ -210,7 +210,7 @@ Kn.Ford
 <div class="col-md-6 col-lg-4">
 <div class="ftco-footer-widget mb-4">
 <h2 class="ftco-heading-2 logo d-flex">
-<a class="navbar-brand align-items-center" href="index-2.html">
+<a class="navbar-brand align-items-center" href="index.blade.php">
 Kn.Ford
 </a>
 </h2>
